--- a/education.html
+++ b/education.html
@@ -1,44 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WabTech AI Education</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WAB TECH AI</title>
+  <style>
+    /* Base Styles */
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0d0d0d;
+      color: #f5f5f5;
+    }
+
+    /* Container */
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 60px 20px;
+    }
+
+    /* Hero Layout */
+    .hero-layout {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 40px;
+    }
+
+    .hero-text {
+      flex: 1;
+      min-width: 300px;
+    }
+
+    .hero-image {
+      flex: 1;
+      min-width: 300px;
+      text-align: center;
+    }
+
+    .hero-image img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #ffd700;
+    }
+
+    /* Headings and Tagline */
+    h1 {
+      font-size: 48px;
+      font-weight: bold;
+      color: #ffd700;
+      margin-bottom: 10px;
+    }
+
+    .tagline {
+      font-size: 20px;
+      color: #ccc;
+      margin-bottom: 40px;
+    }
+
+    .intro h2 {
+      font-size: 32px;
+      color: #ffd700;
+      margin-bottom: 10px;
+    }
+
+    .intro p {
+      font-size: 18px;
+      color: #eee;
+      margin-bottom: 40px;
+    }
+
+    /* Info Section */
+    .info-section {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+    }
+
+    .column {
+      flex: 1;
+      min-width: 300px;
+      background-color: #1a1a1a;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    .column h3 {
+      font-size: 24px;
+      color: #ffd700;
+      margin-bottom: 15px;
+    }
+
+    .column p {
+      font-size: 16px;
+      color: #ddd;
+      line-height: 1.6;
+    }
+
+    /* CTA Button */
+    .cta {
+      margin-top: 20px;
+    }
+
+    .cta button {
+      background-color: #ffd700;
+      color: #000;
+      border: none;
+      padding: 12px 24px;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta button:hover {
+      background-color: #e6c200;
+    }
+  </style>
 </head>
 <body>
+  <section class="hero">
+    <div class="container hero-layout">
+      <!-- Left Text Content -->
+      <div class="hero-text">
+        <h1>WAB TECH AI</h1>
+        <p class="tagline">Empowering through AI</p>
 
-    <header>
-        <div class="logo-text">
-            <h1>WAB TECH AI</h1>
-            <p>Empowering through AI</p>
+        <div class="intro">
+          <h2>Artificial Intelligence for Everyone</h2>
+          <p>Empowering coders and non-coders alike to innovate with AI.</p>
         </div>
-    </header>
+      </div>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Artificial Intelligence for Everyone</h1>
-            <p>Empowering coders and non-coders alike to innovate with AI.</p>
+      <!-- Right Image -->
+      <div class="hero-image">
+        <img src="ai-head.png" alt="AI Head Illustration" />
+      </div>
+    </div>
+
+    <!-- Info Section -->
+    <div class="container info-section">
+      <div class="column">
+        <h3>Our AI Training Mission</h3>
+        <p>
+          We are democratizing AI skills across Africa. Our training programs are designed to be accessible to everyone, from curious students and farmers to seasoned professionals and entrepreneurs. We believe that with the right knowledge, anyone can leverage AI to solve problems and create opportunities.
+        </p>
+      </div>
+      <div class="column">
+        <h3>Discover Our Pathways</h3>
+        <p>
+          From beginner-friendly workshops that require no coding to in-depth courses in machine learning and data science, we have a program for you. Find the perfect path to start or advance your journey in AI.
+        </p>
+        <div class="cta">
+          <button>Explore WabTech Academy Programs</button>
         </div>
-    </section>
-    
-    <section class="vision-mission">
-        <div class="container">
-            <div class="section-card">
-                <h2>Our AI Training Mission</h2>
-                <p>We are democratizing AI skills across Africa. Our training programs are designed to be accessible to everyone, from curious students and farmers to seasoned professionals and entrepreneurs. We believe that with the right knowledge, anyone can leverage AI to solve problems and create opportunities.</p>
-            </div>
-            <div class="section-card">
-                <h2>Discover Our Pathways</h2>
-                <p>From beginner-friendly workshops that require no coding to in-depth courses in machine learning and data science, we have a program for you. Find the perfect path to start or advance your journey in AI.</p>
-                <a href="academy.html" class="btn btn-primary">Explore WabTech Academy Programs</a>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Wab Tech AI. All rights reserved.</p>
-    </footer>
-
+      </div>
+    </div>
+  </section>
 </body>
 </html>
